# 2048

./: CMakeLists.txt  README.md
include/: elements.hpp  globals.hpp  input.hpp  window.hpp
src/: elements.cpp  input.cpp  main.cpp  window.cpp
